<?xml version="1.0"?>
<package format="2">
  <name>comm_lib_interface</name>
  <version>0.1.0</version>
  <description>communication library interface</description>
  <maintainer email="appiusa@ethz.ch">ros</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>smb_gazebo</exec_depend>
</package>
